--- a/landing-ob-style.css
+++ b/landing-ob-style.css
@@ -23,6 +23,7 @@
     src: url(effra/EffraMedium.ttf);
 }
 
+
 /* initial screensize: Macbook Air (1440x900) */
 
 html,
@@ -60,6 +61,7 @@ body {
     z-index: 5;
 }
 
+
 /* log in */
 
 .buttonContainer {
@@ -69,7 +71,6 @@ body {
     justify-content: flex-end;
     height: 60%;
     width: 40%;
-
 }
 
 .button1 {
@@ -87,7 +88,7 @@ body {
 }
 
 .button1:hover {
-    transform: scale(1.05);  
+    transform: scale(1.05);
 }
 
 
@@ -107,13 +108,14 @@ body {
 }
 
 .button2:hover {
-    transform: scale(1.05);  
+    transform: scale(1.05);
 }
 
 .container {
     height: 100vh;
     justify-content: center;
 }
+
 
 /* container styles */
 
@@ -160,13 +162,11 @@ body {
 }
 
 .footer1:hover {
-  transform: translateY(-20px);
+    transform: translateY(-20px);
 }
-
 
 #t1,
 #t2 {
-    font-family: effraBold;
     font-size: 90px;
     margin: 0;
     width: 80%;
@@ -196,7 +196,6 @@ body {
 }
 
 a[href^="#link2"] {
-    font-family: effraBold;
     margin-top: 3%;
     margin-left: 35%;
     margin-right: 35%;
@@ -209,9 +208,9 @@ a[href^="#link2"] {
 }
 
 a[href^="#link2"]:hover {
-    transform: scale(1.05);  
-
+    transform: scale(1.05);
 }
+
 
 /* container 2 styles */
 
@@ -239,7 +238,6 @@ a[href^="#link2"]:hover {
 }
 
 .header2 {
-    font-family: effraBold;
     color: #FFFFFF;
     font-size: 30px;
     width: 100%;
@@ -259,7 +257,6 @@ a[href^="#link2"]:hover {
 }
 
 a[href^="#link3"] {
-    font-family: effraBold;
     position: relative;
     top: 100px;
     font-size: 18px;
@@ -296,7 +293,6 @@ a[href^="#link3"] {
 }
 
 .header3 {
-    font-family: effraBold;
     color: #FFFFFF;
     font-size: 30px;
     width: 100%;
@@ -316,7 +312,6 @@ a[href^="#link3"] {
 }
 
 a[href^="#link4"] {
-    font-family: effraBold;
     position: relative;
     top: 100px;
     font-size: 18px;
@@ -337,7 +332,6 @@ a[href^="#link4"] {
 }
 
 .content4 {
-    font-family: effraBold;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -357,6 +351,7 @@ a[href^="#link4"] {
     z-index: 3;
 }
 
+
 /* get started */
 
 .button3 {
@@ -373,8 +368,7 @@ a[href^="#link4"] {
 }
 
 .button3:hover {
-    transform: scale(1.05);  
-
+    transform: scale(1.05);
 }
 
 .back {
@@ -383,7 +377,6 @@ a[href^="#link4"] {
 }
 
 a[href^="#nav"] {
-    font-family: effraBold;
     font-size: 24px;
     color: rgb(53, 116, 223);
     background-color: #FFFFFF;
@@ -391,22 +384,22 @@ a[href^="#nav"] {
     padding: 40px;
 }
 
+
 /* for tablet: iPad (768x1024) */
 
 @media screen and (max-width: 770px) {
-    #t1, #t2 {
+    #t1,
+    #t2 {
         font-size: 80px;
     }
-
     .intro {
         top: 5%;
     }
-    
     .button3 {
         width: 40%;
     }
-
 }
+
 
 /* for mobile: iPhoneX (375x812)*/
 
@@ -510,5 +503,4 @@ a[href^="#nav"] {
     a[href^="#nav"] {
         font-size: 15px;
     }
-    
 }
