--- a/landing-ob-style.css
+++ b/landing-ob-style.css
@@ -122,7 +122,7 @@ body {
 #section1 {
     height: 100vh;
     z-index: 2;
-    background-image: url("img/aditya-chinchure-ZhqCZjr9fHo-unsplash.jpg");
+    background-image: url("img/eltonJohn3.jpg");
     background-size: cover;
 }
 
@@ -326,7 +326,7 @@ a[href^="#link4"] {
 
 #link4 {
     height: 100vh;
-    background-image: url("img/aditya-chinchure-ZhqCZjr9fHo-unsplash.jpg");
+    background-image: url("img/eltonJohn3.jpg");
     background-size: cover;
     z-index: 2;
 }
