--- a/membershipEndpoint-style.css
+++ b/membershipEndpoint-style.css
@@ -187,7 +187,7 @@ body {
     width: 30%;
     border-radius: 20px 20px;
     padding: auto;
-    background-image: url("img/shutterstock_editorial_10428419u-e1569775877895.jpg");
+    background-image: url("img/eltonJohn3.jpg");
     background-size: cover;
     transition: all .2s ease-in-out;
 }
