--- a/membershipEndpoint-style.css
+++ b/membershipEndpoint-style.css
@@ -65,7 +65,6 @@ body {
 }
 
 #name p {
-    font-family: effraLight;
     font-size: 24px;
     padding-right: 20px;
 }
@@ -109,7 +108,6 @@ body {
 .heroContent h2 {
     font-size: 40px;
     padding: 10%;
-    font-family: effraBold;
     margin: 0;
 }
 
@@ -141,7 +139,6 @@ body {
 }
 
 .container2 h2 {
-    font-family: effraBold;
     font-size: 40px;
     padding: 2%;
     color: rgba(53, 116, 223, 1);
@@ -157,7 +154,6 @@ body {
 
 #cardsTitle {
     color: #FFFFFF;
-    font-family: effraBold;
     font-size: 24px;
     padding: 5%;
     margin: 0;
@@ -165,7 +161,6 @@ body {
 
 #cardsInfo {
     color: #FFFFFF;
-    font-family: effraLight;
     font-size: 18px;
     padding-left: 5%;
     padding-bottom: 3%;
@@ -187,7 +182,7 @@ body {
     width: 30%;
     border-radius: 20px 20px;
     padding: auto;
-    background-image: url("img/eltonJohn3.jpg");
+    background-image: url("img/shutterstock_editorial_10428419u-e1569775877895.jpg");
     background-size: cover;
     transition: all .2s ease-in-out;
 }
@@ -236,7 +231,6 @@ body {
         padding-top: 10%;
         padding-bottom: 15%;
         padding-left: 10%;
-        font-family: effraBold;
         margin: 0;
     }
 }
