--- a/membershipEndpoint-style.css
+++ b/membershipEndpoint-style.css
@@ -1,25 +1,25 @@
 @font-face {
-    font-family: effra;
+    font-family: Effra;
     src: url(effra/Effra.ttf);
 }
 
 @font-face {
-    font-family: effraBold;
+    font-family: EffraBold;
     src: url(effra/EffraBold.ttf);
 }
 
 @font-face {
-    font-family: effraItalic;
+    font-family: EffraItalic;
     src: url(effra/EffraItalic.ttf);
 }
 
 @font-face {
-    font-family: effraLight;
+    font-family: EffraLight;
     src: url(effra/EffraLight.ttf);
 }
 
 @font-face {
-    font-family: effraMedium;
+    font-family: EffraMedium;
     src: url(effra/EffraMedium.ttf);
 }
 
@@ -32,6 +32,10 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Effra;
+}
+
+.description {
+    font-family: EffraLight;
 }
 
 
@@ -65,6 +69,7 @@ body {
 }
 
 #name p {
+    font-family: EffraLight;
     font-size: 24px;
     padding-right: 20px;
 }
@@ -108,6 +113,7 @@ body {
 .heroContent h2 {
     font-size: 40px;
     padding: 10%;
+    font-family: effraBold;
     margin: 0;
 }
 
@@ -139,6 +145,7 @@ body {
 }
 
 .container2 h2 {
+    font-family: EffraBold;
     font-size: 40px;
     padding: 2%;
     color: rgba(53, 116, 223, 1);
@@ -154,6 +161,7 @@ body {
 
 #cardsTitle {
     color: #FFFFFF;
+    font-family: EffraBold;
     font-size: 24px;
     padding: 5%;
     margin: 0;
@@ -161,6 +169,7 @@ body {
 
 #cardsInfo {
     color: #FFFFFF;
+    font-family: EffraLight;
     font-size: 18px;
     padding-left: 5%;
     padding-bottom: 3%;
@@ -231,6 +240,7 @@ body {
         padding-top: 10%;
         padding-bottom: 15%;
         padding-left: 10%;
+        font-family: effraBold;
         margin: 0;
     }
 }
