--- a/sign-up1-style.css
+++ b/sign-up1-style.css
@@ -111,7 +111,7 @@ body {
 }
 
 #signUpContainer h2 {
-    font-family: EffraBold;
+    font-family: Effra;
     text-align: left;
     font-size: 50px;
     margin: 0;
