--- a/sign-up2-style.css
+++ b/sign-up2-style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .content h2 {
-    font-family: EffraBold;
+    font-family: Effra;
     text-align: left;
     font-size: 50px;
     margin: 0;
